# cmake-cheatsheet

./: .gitignore  LICENSE  Makefile  README.md  cmake-cheatsheet.tex  index.html
src/add_test/: CMakeLists.txt
src/add_test/testrunner/src/: main.cpp
src/app_qt5/: CMakeLists.txt
src/app_qt5/src/: demo_application.cpp  demo_application.hpp  main.cpp
src/compiler_dependent_flag/: CMakeLists.txt
src/compiler_dependent_flag/src/: bar.cpp
src/externalproject/: CMakeLists.txt
src/find_package/: CMakeLists.txt
src/find_package/src/: main.cpp
src/headeronly_library/: CMakeLists.txt
src/import_library/: CMakeLists.txt
src/import_library/src/: main.cpp
src/lib_install/: CMakeLists.txt
src/lib_install/include/simple/: echo.hpp
src/object_library/: CMakeLists.txt
src/object_library/include/simple/: echo.hpp
src/package/: CMakeLists.txt
src/package/include/simple/: echo.hpp
src/package/src/: echo.cpp
src/shared_library/: CMakeLists.txt
src/shared_library/src/: echo.cpp  echo_private.hpp
src/simple_executable/: CMakeLists.txt  main.cpp
src/static_library/: CMakeLists.txt
